--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ant-design/colors": "^7.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.0",
+    "echarts": "^5.5.1",
+    "echarts-liquidfill": "^3.1.0",
     "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
